--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         to allocate a block of memory (of arbitrary size) at run-time, using the standard library's malloc function, and
         treat it as an array. Since arrays are always accessed (in effect) via pointers, array
         accesses are typically not checked against the underlying array size, although some compilers may provide bounds
-        checking as an option.[35][36] Array bounds violations are therefore possible and can lead
+        checking as an option. Array bounds violations are therefore possible and can lead
         to various repercussions, including illegal memory accesses, corruption of data, buffer overruns, and run-time
         exceptions.</p>
       <p>C does not have a special provision for declaring multi-dimensional arrays, but rather relies on recursion
