--- a/index.html
+++ b/index.html
@@ -141,17 +141,17 @@
         allocate the array with an additional "row vector" of pointers to the columns.) C99 introduced "variable-length
         arrays"
         which address this issue.</p>
-      <code><pre>int func(int N, int M) {
+      <code>int func(int N, int M) {
   float (*p)[N][M] = malloc(sizeof *p);
   if (!p)
-    return -1;
+    <span class="tab">return -1;</span>
   for (int i = 0; i &lt; N; i++)
     for (int j = 0; j &lt; M; j++)
-      (*p)[i][j] = i + j;
+    <span class="tab">(*p)[i][j] = i + j;;</span>
   print_array(N, M, p);
   free(p);
   return 1;
-}</pre></code>
+}</code>
     </section>
   </main>
 
