--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
       <code>int func(int N, int M) {
   float (*p)[N][M] = malloc(sizeof *p);
   if (!p)
-    <span class="tab">return -1;</span>
+    return -1;
   for (int i = 0; i &lt; N; i++)
     for (int j = 0; j &lt; M; j++)
-    <span class="tab">(*p)[i][j] = i + j;;</span>
+      (*p)[i][j] = i + j;
   print_array(N, M, p);
   free(p);
   return 1;
